--- a/fuzz/Makefile
+++ b/fuzz/Makefile
@@ -1,5 +1,5 @@
-CFLAGS = -I../pythond/include/python3.11d -I../pythond/include/python3.11d -I../bencode_fast  -Wsign-compare  -g -O0 -Wall -Wextra -Wpedantic -Werror
-LDFLAGS = -L../pythond/lib -lpython3.11d -Wl,-rpath=../pythond/lib  -lpthread -ldl  -lutil -lm  
+CFLAGS = -I../pythond/include/python3.11d -I../pythond/include/python3.11d -I../bencode_fast  -Wsign-compare  -g -O0 -Wall -Wextra -Wpedantic -Werror -fno-omit-frame-pointer
+LDFLAGS = -L../pythond/lib -lpython3.11d -Wl,-rpath=../pythond/lib  -lpthread -ldl  -lutil -lm
 
 
 .PHONY: all
@@ -9,27 +9,27 @@ fuzzer: ../bencode_fast/bencodemodule.c fuzzer.c
 	clang ${CFLAGS} ${LDFLAGS} -fsanitize=fuzzer,address fuzzer.c -o fuzzer
 
 coverage: ../bencode_fast/bencodemodule.c fuzzer.c standalone_fuzzer_main.c
-	clang ${CFLAGS} ${LDFLAGS} -fprofile-instr-generate -fcoverage-mapping fuzzer.c standalone_fuzzer_main.c -o coverage
+	clang ${CFLAGS} ${LDFLAGS} -lasan -fprofile-instr-generate -fcoverage-mapping fuzzer.c standalone_fuzzer_main.c -o coverage
 
 
 .PHONY: fuzz
 fuzz: fuzzer
 	mkdir -p crashes
 	mkdir -p CORPUS
-	PYTHONHOME=$(shell pwd)/../pythond ./fuzzer -detect_leaks=1 -artifact_prefix=./crashes/ -max_len=65536 CORPUS
-# -jobs=12 -reload=1 
+	PYTHONHOME=$(shell pwd)/../pythond ./fuzzer -detect_leaks=1 -artifact_prefix=./crashes/ -max_len=4096 -jobs=12 -reload=1 CORPUS
+# -jobs=12 -reload=1
 
 
 .PHONY: cov
 cov: coverage
-	./coverage CORPUS/*
+	LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libasan.so.5 ./coverage CORPUS/*
 	llvm-profdata merge -sparse *.profraw -o coverage.profdata
 	llvm-cov show coverage -instr-profile=coverage.profdata -name=decode
 
 
 .PHONY: test
 test: test.c
-	clang ${CFLAGS} ${LDFLAGS} test.c -o test
+	clang ${CFLAGS} ${LDFLAGS} -fsanitize=address test.c -o test
 	./test
 
 
